[package]
name = "rostl-datastructures"
description = "Oblivious data structures for secure and efficient computation."
readme = "README.crate.md"
version = "0.1.0-alpha5"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
homepage.workspace = true

[dependencies]
rostl-oram.workspace = true
rostl-primitives.workspace = true
rostl-sort.workspace = true

ahash.workspace = true
bytemuck.workspace = true
kanal.workspace = true
libc.workspace = true
tracing.workspace = true
static_assertions.workspace = true
rand.workspace = true
seq-macro.workspace = true

[dev-dependencies]
criterion.workspace = true

[lints]
workspace = true

[[bench]]
name="array_like"
harness=false

[[bench]]
name="heap"
harness=false
