[package]
name = "rostl-oram"
description = "Oblivious RAM (ORAM) implementations."
readme = "README.crate.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
homepage.workspace = true

[dependencies]
rostl-primitives.workspace = true
bytemuck.workspace = true
static_assertions.workspace = true
rand.workspace = true

[dev-dependencies]
criterion.workspace = true


[[bench]]
name="oram"
harness=false

[lints]
workspace = true
