[package]
name = "rods-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck.workspace = true

[dev-dependencies]
criterion.workspace = true
criterion-cycles-per-byte.workspace = true


[[bench]]
name="cmov"
harness=false