[package]
name = "rostl-primitives"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck.workspace = true

[dev-dependencies]
criterion.workspace = true

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
criterion-cycles-per-byte.workspace = true

[[bench]]
name="cmov"
harness=false