[package]
name = "rostl-primitives"
description = "Oblivious primitives and utils."
readme = "README.crate.md"
version = "0.1.0-alpha7"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
assume.workspace = true
bytemuck.workspace = true
static_assertions.workspace = true

[dev-dependencies]
criterion.workspace = true

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
criterion-cycles-per-byte.workspace = true

[[bench]]
name="cmov"
harness=false

[[bench]]
name="utils"
harness=false
