[package]
name = "rods-shuffling"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
rods-sort.workspace = true
rods-primitives.workspace = true
rand.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name="shuffle"
harness=false