[package]
name = "rostl-sort"
description = "Oblivious sorting algorithms."
readme = "README.md"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
homepage.workspace = true

[lints]
workspace = true

[dependencies]
bytemuck.workspace = true
rostl-primitives.workspace = true
rand.workspace = true

[dev-dependencies]
criterion.workspace = true

[[bench]]
name="osort"
harness=false