[package]
name = "rods-storage"
edition = "2021"
version.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true

[dependencies]
bytemuck.workspace = true

[dev-dependencies]
criterion-cycles-per-byte.workspace = true
criterion.workspace = true

[lints]
workspace = true

[[bench]]
name = "backend"
harness = false