[package]
name = "rostl-storage"
description = "Storage utilities for the rostl project."
readme = "README.crate.md"
version = "0.1.0-alpha9"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
exclude.workspace = true
homepage.workspace = true

[dependencies]
bytemuck.workspace = true

[dev-dependencies]
criterion.workspace = true

[target.'cfg(target_arch = "x86_64")'.dev-dependencies]
criterion-cycles-per-byte.workspace = true

[lints]
workspace = true

[[bench]]
name = "backend"
harness = false
